<resources>
    <string name="app_name">Bit Log</string>
    <string name="tab_text_1">Inicio</string>
    <string name="tab_text_2">Historico</string>
    <string name="detalle">Detalle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingrese o registrese</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvendio !"</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="invalid_password">Contraseña debe tener 5 caracteres</string>
    <string name="login_failed">"Ingreso fallido"</string>
    <string name="welcome1">welcome1</string>
    <string name="nav_header_subtitle">info@hstech.cl</string>

    <string name="nav_header_desc">Version 1.0 - 2019</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Bitacora en linea</string>

    <string name="edittext_hint"><font size="13">(Opcion de alarma al email)</font></string>
    <string name="register">Registrar</string>
    <string name="recent">Reciente</string>
    <string name="manually_app">Agregar Manualmente</string>
    <string name="contact">Contacto</string>
    <string name="share">Compartir</string>
    <string name="rate_app">Evaluar App</string>
    <string name="intro">¿Como funciona?</string>
    <string name="map">Mapa</string>
    <string name="Mapa">Mapa</string>
    <string name="title_activity_mapa1">Map</string>
    <string name="search">Buscar</string>
    <string name="sign_out">Deslogearse</string>
    <string name="qr_assign">Reasignar codigo QR</string>
    <string name="intro_slider">Introduccion</string>
    <string name="intro_text">Bienvenidos</string>


</resources>
