<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
      <item
            android:id="@+id/intro"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/intro" />
        <item
            android:id="@+id/rate_app"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/rate_app" />

        <item
            android:id="@+id/registrar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/register" />

        <item
            android:id="@+id/reciente"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/recent" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/contact" />

        <item
            android:id="@+id/manually_app"
            android:icon="@drawable/ic_baseline_add_circle_outline_24"
            android:title="@string/manually_app" />

        <item
            android:id="@+id/qr_assign"
            android:icon="@drawable/ic_baseline_qr_code_24"
            android:title="@string/qr_assign" />

        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map" />





<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />&ndash;&gt;-->
    </group>
</menu>